# lovely_guitar_tools

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  lovely_guitar-3b502696e2cf8a9e_bg.wasm  lovely_guitar-6dc0ba51697628cc_bg.wasm  lovely_guitar-ded86c5a4f0ad6ea.js  lovely_guitar-ded86c5a4f0ad6ea_bg.wasm
.github/workflows/: pages.yml
src/: audio_engine.rs  lib.rs
src/core_state/: guitar.rs  mod.rs  music_theory.rs  settings.rs
src/gui/: details.rs  fretboard.rs  header.rs  mod.rs  piano_roll.rs  settings_panel.rs  sidebar.rs  tracks.rs  widget.rs
src/tests/: guitar_tests.rs  mod.rs
