[package]
name = "lovely_guitar"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.32.3"
egui = "0.32.3"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
log = "0.4"
console_log = "1.0"
web-sys = { version = "0.3.85", features = ["AudioContext",
  "AudioContextState",
  "AudioWorklet", "Window", "Document", "HtmlCanvasElement", "Element","AudioDestinationNode",
  "AudioNode",
  "OscillatorNode",
  "OscillatorType",
  "GainNode",
  "AudioParam",
  "AudioScheduledSourceNode",
  "BiquadFilterNode",
  "BiquadFilterType",
  "DelayNode"] }
strum = { version = "0.27.2", features = ["derive"] }
